--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -43,7 +43,7 @@
         </li>
         <% if user_signed_in? %>
             <li>        
-            <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+            <%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => "nav-link" %>
             </li>
             <li>
                 <%= current_user.email %>
@@ -51,11 +51,11 @@
 
         <%  else %>
         <li>        
-        <%= link_to "Se connecter", new_user_session_path %>
+        <%= link_to "Se connecter", new_user_session_path, :class => "nav-link" %>
         </li>
 
         <li>
-            <%= link_to "S'inscrire", new_user_registration_path %>
+            <%= link_to "S'inscrire", new_user_registration_path, :class => "nav-link" %>
         </li>
         <% end %>
     </ul>
