ajout activestorage et CRUD Item

--- a/app/views/item/show.html.erb
+++ b/app/views/item/show.html.erb
@@ -8,4 +8,23 @@
 	  <strong>Description:</strong>
 	  <%= @item.description %>
 	</p>
+
+ 
+	<p>
+	  <strong>Description:</strong>
+	  <%= @item.price %>
+	</p>
+
+
+	<p>
+	  <strong>Image:</strong>
+	  <%= image_tag @item.item_image %>
+	</p>
+
+
+
+
+
+
+
 </div>
