--- a/app/views/home/index3.html.erb
+++ b/app/views/home/index3.html.erb
@@ -112,7 +112,7 @@
         <div class="swiper-wrapper">
             <!-- Slide -->
             <div class="swiper-slide" data-swiper-autoplay="8000">
-                <div class="slice holder-item holder-item-light has-bg-cover bg-size-cover" style="background-image: url('../../assets/images/backgrounds/slider/img-59.jpg'); background-position: bottom center;">
+                <div class="slice holder-item holder-item-light has-bg-cover bg-size-cover" style="background-image: url('../../assets/images/.jpg'); background-position: bottom center;">
                     <span class="mask bg-dark alpha-9"></span>
                     <div class="container d-flex align-items-center">
                         <div class="col">
