--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,18 +1,165 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<!-- MAIN WRAPPER -->
+<div class="body-wrap">
+    <div id="st-container" class="st-container">
 
+        <nav class="st-menu st-effect-1" id="menu-1">
+    <div class="st-profile">
+        <div class="st-profile-user-wrapper">
+            <div class="profile-user-image">
+                <img src="../../assets/images/prv/people/person-1.jpg" class="img-circle" />
+            </div>
+            <div class="profile-user-info">
+                <span class="profile-user-name">Bertram Ozzie</span>
+                <span class="profile-user-email">username@example.com</span>
+            </div>
+        </div>
+    </div>
 
-<div class="container">
+    <div class="st-menu-list mt-2">
+        <ul>
+            <li>
+                <a href="#">
+                    <i class="ion-ios-bookmarks-outline"></i> Theme documentation
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="ion-ios-cart-outline"></i> Purchase Tribus
+                </a>
+            </li>
+        </ul>
+    </div>
+
+    <h3 class="st-menu-title">Account</h3>
+    <div class="st-menu-list">
+        <ul>
+            <li>
+                <a href="#">
+                    <i class="ion-ios-person-outline"></i> User profile
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="ion-ios-location-outline"></i> My addresses
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="ion-card"></i> My cards
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="ion-ios-unlocked-outline"></i> Password update
+                </a>
+            </li>
+        </ul>
+    </div>
+
+    <h3 class="st-menu-title">Support center</h3>
+    <div class="st-menu-list">
+        <ul>
+            <li>
+                <a href="#">
+                    <i class="ion-ios-information-outline"></i> About Tribus
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="ion-ios-email-outline"></i> Contact &amp; support
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="fa fa-camera"></i> Getting started
+                </a>
+            </li>
+        </ul>
+    </div>
+</nav>
+
+        <div class="st-pusher">
+            <div class="st-content">
+                <div class="st-content-inner">
+                    <!-- Header -->
+                    <div class="header">
+    <!-- Top Bar -->
+    
+    <!-- Global Search -->
+    <section id="sctGlobalSearch" class="global-search global-search-overlay">
+    <div class="container">
+        <div class="global-search-backdrop mask-dark--style-2"></div>
+
+        <!-- Search form -->
+        <form class="form-horizontal form-global-search z-depth-2-top" role="form">
+            <div class="px-4">
+                <div class="row">
+                    <div class="col-12">
+                        <input type="text" class="search-input" placeholder="Type and hit enter ...">
+                    </div>
+                </div>
+            </div>
+            <a href="#" class="close-search" data-toggle="global-search" title="Close search bar"></a>
+        </form>
+    </div>
+</section>
+
+</div>
+
+    <!-- Slider -->
+    <section class="swiper-js-container background-image-holder" data-holder-type="fullscreen" data-holder-offset="">
+    <div class="swiper-container" data-swiper-autoplay="true" data-swiper-effect="fade" data-swiper-items="1" data-swiper-space-between="0">
+        <div class="swiper-wrapper">
+            <!-- Slide -->
+            <div class="swiper-slide" data-swiper-autoplay="8000">
+                <div class="slice holder-item holder-item-light has-bg-cover bg-size-cover" style="background-image: url('../../assets/images/backgrounds/slider/img-59.jpg'); background-position: bottom center;">
+                    <span class="mask bg-dark alpha-9"></span>
+                    <div class="container d-flex align-items-center">
+                        <div class="col">
+                            <div class="row justify-content-center text-center">
+                                <div class="col-lg-8">
+                                    <h2 class="heading display-3 strong-600 text-normal animated" data-animation-in="fadeInDownBig" data-animation-delay="200">
+                                        Amazing Cat
+                                    </h2>
+                                    <p class="text-lg line-height-1_6 mt-4 animated" data-animation-in="fadeInUpBig" data-animation-delay="200">
+                                        Here you will find the best cat pictures on the planet, buy them and download them !<br><br>
+                                        <b>Meow !</b>
+                                    </p>
+
+                                    <a href="#" class="btn btn-styled btn-base-1 btn-circle mt-5 animated" data-animation-in="fadeInUpBig" data-animation-delay="1000">
+                                        🐾🐾🐾
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+                    <section class="slice sct-color-1">
+                        <div class="container">
+                           
+
+                            <div class="container">
     <div class="col-md-12">
         <div>
             <% @items.each do |item| %>
                 <div class="col-sm-4">
                     <div class="panel panel-primary">
                         <div class="panel-heading">
+
                                 <%= link_to item.title,item,class:"btn btn-primary btn-block" %>
                         </div>
                         <div class="panel-body">
-                            Price  : <%= number_to_currency(item.price, unit: "RS " ) %><br>
+
+                            Price  : <%= number_to_currency(item.price, unit: "RS " ) %>
+
+
+                            <br>
+
                         </div>
                         <div class="panel-footer">
                             <%= link_to "Edit" ,edit_item_path(item) , class: "btn btn-default" %>
@@ -25,3 +172,17 @@
         </div>
     </div>
 </div>
+
+                           
+                        </div>
+                    </section>
+                </div>
+            </div>
+        </div><!-- END: st-pusher -->
+    </div><!-- END: st-container -->
+</div><!-- END: body-wrap -->
+
+<!-- SCRIPTS -->
+<a href="#" class="back-to-top btn-back-to-top"></a>
+</body>
+</html>
