--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,16 +17,16 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="../../assets/vendor/bootstrap/css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="../vendor/bootstrap/css/bootstrap.min.css" type="text/css">
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700,800|Roboto:400,500,700" rel="stylesheet">
 
     <!-- Plugins -->
-    <link rel="stylesheet" href="../../assets/vendor/swiper/css/swiper.min.css">
-    <link rel="stylesheet" href="../../assets/vendor/hamburgers/hamburgers.min.css" type="text/css">
-    <link rel="stylesheet" href="../../assets/vendor/animate/animate.min.css" type="text/css">
-    <link rel="stylesheet" href="../../assets/vendor/fancybox/css/jquery.fancybox.min.css">
+    <link rel="stylesheet" href="../vendor/swiper/css/swiper.min.css">
+    <link rel="stylesheet" href="../vendor/hamburgers/hamburgers.min.css" type="text/css">
+    <link rel="stylesheet" href="../vendor/animate/animate.min.css" type="text/css">
+    <link rel="stylesheet" href="../vendor/fancybox/css/jquery.fancybox.min.css">
 
     <!-- Icons -->
     <link rel="stylesheet" href="../../assets/fonts/font-awesome/css/font-awesome.min.css" type="text/css">
@@ -53,46 +53,46 @@
       <%= render "layouts/footer" %>
 
     <!-- Core -->
-    <script src="../../assets/vendor/jquery/jquery.min.js"></script>
-    <script src="../../assets/vendor/popper/popper.min.js"></script>
-    <script src="../../assets/vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="../vendor/jquery/jquery.min.js"></script>
+    <script src="../vendor/popper/popper.min.js"></script>
+    <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
     <script src="../../assets/js/slidebar/slidebar.js"></script>
     <script src="../../assets/js/classie.js"></script>
 
     <!-- Bootstrap Extensions -->
-    <script src="../../assets/vendor/bootstrap-notify/bootstrap-growl.min.js"></script>
-    <script src="../../assets/vendor/scrollpos-styler/scrollpos-styler.js"></script>
+    <script src="../vendor/bootstrap-notify/bootstrap-growl.min.js"></script>
+    <script src="../vendor/scrollpos-styler/scrollpos-styler.js"></script>
 
     <!-- Plugins: Sorted A-Z -->
-    <script src="../../assets/vendor/adaptive-backgrounds/adaptive-backgrounds.js"></script>
-    <script src="../../assets/vendor/countdown/js/jquery.countdown.min.js"></script>
-    <script src="../../assets/vendor/dropzone/dropzone.min.js"></script>
-    <script src="../../assets/vendor/easy-pie-chart/jquery.easypiechart.min.js"></script>
-    <script src="../../assets/vendor/fancybox/js/jquery.fancybox.min.js"></script>
-    <script src="../../assets/vendor/flatpickr/flatpickr.min.js"></script>
-    <script src="../../assets/vendor/flip/flip.min.js"></script>
-    <script src="../../assets/vendor/footer-reveal/footer-reveal.min.js"></script>
-    <script src="../../assets/vendor/gradientify/jquery.gradientify.min.js"></script>
-    <script src="../../assets/vendor/headroom/headroom.min.js"></script>
-    <script src="../../assets/vendor/headroom/jquery.headroom.min.js"></script>
-    <script src="../../assets/vendor/input-mask/input-mask.min.js"></script>
-    <script src="../../assets/vendor/instafeed/instafeed.js"></script>
-    <script src="../../assets/vendor/milestone-counter/jquery.countTo.js"></script>
-    <script src="../../assets/vendor/nouislider/js/nouislider.min.js"></script>
-    <script src="../../assets/vendor/paraxify/paraxify.min.js"></script>
-    <script src="../../assets/vendor/select2/js/select2.min.js"></script>
-    <script src="../../assets/vendor/sticky-kit/sticky-kit.min.js"></script>
-    <script src="../../assets/vendor/swiper/js/swiper.min.js"></script>
-    <script src="../../assets/vendor/textarea-autosize/autosize.min.js"></script>
-    <script src="../../assets/vendor/typeahead/typeahead.bundle.min.js"></script>
-    <script src="../../assets/vendor/typed/typed.min.js"></script>
-    <script src="../../assets/vendor/vide/vide.min.js"></script>
-    <script src="../../assets/vendor/viewport-checker/viewportchecker.min.js"></script>
-    <script src="../../assets/vendor/wow/wow.min.js"></script>
+    <script src="../vendor/adaptive-backgrounds/adaptive-backgrounds.js"></script>
+    <script src="../vendor/countdown/js/jquery.countdown.min.js"></script>
+    <script src="../vendor/dropzone/dropzone.min.js"></script>
+    <script src="../vendor/easy-pie-chart/jquery.easypiechart.min.js"></script>
+    <script src="../vendor/fancybox/js/jquery.fancybox.min.js"></script>
+    <script src="../vendor/flatpickr/flatpickr.min.js"></script>
+    <script src="../vendor/flip/flip.min.js"></script>
+    <script src="../vendor/footer-reveal/footer-reveal.min.js"></script>
+    <script src="../vendor/gradientify/jquery.gradientify.min.js"></script>
+    <script src="../vendor/headroom/headroom.min.js"></script>
+    <script src="../vendor/headroom/jquery.headroom.min.js"></script>
+    <script src="../vendor/input-mask/input-mask.min.js"></script>
+    <script src="../vendor/instafeed/instafeed.js"></script>
+    <script src="../vendor/milestone-counter/jquery.countTo.js"></script>
+    <script src="../vendor/nouislider/js/nouislider.min.js"></script>
+    <script src="../vendor/paraxify/paraxify.min.js"></script>
+    <script src="../vendor/select2/js/select2.min.js"></script>
+    <script src="../vendor/sticky-kit/sticky-kit.min.js"></script>
+    <script src="../vendor/swiper/js/swiper.min.js"></script>
+    <script src="../vendor/textarea-autosize/autosize.min.js"></script>
+    <script src="../vendor/typeahead/typeahead.bundle.min.js"></script>
+    <script src="../vendor/typed/typed.min.js"></script>
+    <script src="../vendor/vide/vide.min.js"></script>
+    <script src="../vendor/viewport-checker/viewportchecker.min.js"></script>
+    <script src="../vendor/wow/wow.min.js"></script>
 
     <!-- Isotope -->
-    <script src="../../assets/vendor/isotope/isotope.min.js"></script>
-    <script src="../../assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
+    <script src="../vendor/isotope/isotope.min.js"></script>
+    <script src="../vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
 
     <!-- App JS -->
     <script src="../../assets/js/boomerang.min.js"></script>
