ajout images sur index

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -160,6 +160,8 @@
 
                             <br>
 
+                            <%= image_tag item.item_image %>
+
                         </div>
                         <div class="panel-footer">
                             <%= link_to "Edit" ,edit_item_path(item) , class: "btn btn-default" %>
@@ -169,6 +171,7 @@
                     </div>
                 </div>
             <%end%>
+
         </div>
     </div>
 </div>
