--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -139,45 +139,48 @@
     </div>
 </section>
 
-                    <section class="slice sct-color-1">
-                        <div class="container">
-                           
-
-                            <div class="container">
-    <div class="col-md-12">
-        <div>
-            <% @items.each do |item| %>
-                <div class="col-sm-4">
-                    <div class="panel panel-primary">
-                        <div class="panel-heading">
-
-                                <%= link_to item.title,item,class:"btn btn-primary btn-block" %>
-                        </div>
-                        <div class="panel-body">
-
-                            Price  : <%= number_to_currency(item.price, unit: "RS " ) %>
 
 
-                            <br>
 
-                            <%= image_tag item.item_image %>
 
-                        </div>
-                        <div class="panel-footer">
+    <section class="slice sct-color-1">
+                        
+
+<% @items.each do |item| %>
+  <div class="row mb-4">
+    <div class="card w-50 bg-light">
+      <div class="card-body">
+        <h2 class="card-title"><%= item.title %></h2>
+        <div class="row">
+          <div class="col-6">
+            <%= image_tag(item.item_image, width: "200") %>
+          </div>
+          <div class="col-6">
+            <div class="card-text"><%= sanitize(item.description) %></div>
+          </div>
+        </div>
+      </div>
+
+
+
+      <div class="card-footer text-center font-weight-bold">
+        <%= number_to_currency item.price, unit: '€', separator: ',', format: '%n %u' %>
+      </div>
+
+        <div class="card-footer">
                             <%= link_to "Edit" ,edit_item_path(item) , class: "btn btn-default" %>
                             <%= link_to "Delete" ,item , :confirm => "Are you sure?" , :method => :delete , class: "btn btn-danger"%>
-                        <hr>
-                        </div>
-                    </div>
-                </div>
-            <%end%>
-
+                             <%= button_to "Ajouter au panier" ,line_items_path(item_id: item), class: "btn btn-primary" %>
         </div>
-    </div>
-</div>
+   
 
-                           
-                        </div>
+    </div>
+  </div>
+<% end %>
+
+
+
+
                     </section>
                 </div>
             </div>
