--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,31 +1,32 @@
-<p id="notice"><%= notice %></p>
+<body class="background_color">
+  <div class="form_container">
+    <div class="row">
+      <div class="col-6">
 
-<p>
-  <strong>Title:</strong>
-  <%= @item.title %>
-</p>
+        <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Description:</strong>
-  <%= @item.description %>
-</p>
+        <p>
+          <strong>Title:</strong>
+          <%= @item.title %>
+        </p>
 
-<p>
-  <strong>Price:</strong>
-  <%= @item.price %>
-</p>
+        <p>
+          <strong>Description:</strong>
+          <%= @item.description %>
+        </p>
 
-<p>
-  <strong>Image url:</strong>
-  <%= @item.image_url %>
-</p>
+        <p>
+          <strong>Price:</strong>
+          <%= @item.price %> €
+        </p>
+      </div>
 
-
-<p>
-  <strong>Image Activestorage:</strong>
-  <%= image_tag @item.item_image %>
-</p>
-
-
-<%= link_to 'Edit', edit_item_path(@item) %> |
-<%= link_to 'Back', items_path %>
+      <div class="col-6">
+      <p>
+        <strong>Image Activestorage:</strong>
+        <%= image_tag @item.item_image %>
+      </p>
+      </div>
+    </div>
+  </div>
+</body>
