--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,9 +2,8 @@
 <nav class="navbar navbar-expand-lg navbar--bold  navbar-transparent navbar-inverse bg-dark ">
     <div class="container navbar-container">
         <!-- Brand/Logo -->
-            <a class="navbar-brand" href="#">
-            <img src="../../assets/images/logo/logo-1-a.png" class="d-none d-lg-inline-block" alt="Boomerang">
-            <img src="../../assets/images/logo/logo-1-a.png" class="d-lg-none" alt="Boomerang">            
+            <a class="navbar-brand logo" href="#">
+                🐾    
             </a>
         
         <div class="d-inline-block">
@@ -31,16 +30,6 @@
 
     <!-- Navbar links -->
     <ul class="navbar-nav">
-        <li class="nav-item dropdown megamenu">
-            <a class="nav-link" href="#">
-                Overview
-            </a>
-        </li>
-        <li class="nav-item dropdown megamenu">
-            <a class="nav-link" href="#">
-                Overview
-            </a>
-        </li>
         <% if user_signed_in? %>
             <li>        
             <%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => "nav-link" %>
