--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,9 +2,7 @@
 <nav class="navbar navbar-expand-lg navbar--bold  navbar-transparent navbar-inverse bg-dark ">
     <div class="container navbar-container">
         <!-- Brand/Logo -->
-            <a class="navbar-brand logo" href="#">
-                🐾    
-            </a>
+            <%= link_to "🐾", "/", :class => "navbar-brand logo" %>
         
         <div class="d-inline-block">
             <!-- Navbar toggler  -->
