--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,4 +1,27 @@
-<p id="notice"><%= notice %></p>
+<h2>Panier</h2>
+<ul>
+  <% @cart.line_items.each do |element| %>
+    <li><%= element.item.title %> (X <%= element.quantity %>) <span class="badge badge-info"><%= number_to_currency(element.total, unit: "€", separator: ",", format: "%n %u") %>
+</li>
+  <% end %>
+</ul>
 
-<%= link_to 'Edit', edit_cart_path(@cart) %> |
-<%= link_to 'Back', carts_path %>
+
+<p class="font-weight-bold">Total : <span class="badge badge-info"><%= number_to_currency(@cart.total, unit: "€", separator: ",", format: "%n %u") %></span></p>
+
+
+
+<div class="row">
+  <div class="col">
+   <%= link_to "Retour aux produits", root_path, class: "btn btn-primary" %>
+  </div> 
+
+  <div class="col">
+    <%= button_to "Vider le panier", @cart, method: :delete, data: {
+    confirm: "Êtes-vous sûr ?" }, class: "btn btn-danger" %>
+  </div>
+</div>
+
+
+
+
