--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,10 @@
 <nav class="navbar navbar-expand-lg navbar--bold  navbar-transparent navbar-inverse bg-dark ">
     <div class="container navbar-container">
         <!-- Brand/Logo -->
-            <%= link_to "🐾", "/", :class => "navbar-brand logo" %>
+            <a class="navbar-brand" href="#">
+            <img src="../../assets/images/logo/logo-1-a.png" class="d-none d-lg-inline-block" alt="Boomerang">
+            <img src="../../assets/images/logo/logo-1-a.png" class="d-lg-none" alt="Boomerang">            
+            </a>
         
         <div class="d-inline-block">
             <!-- Navbar toggler  -->
@@ -28,6 +31,16 @@
 
     <!-- Navbar links -->
     <ul class="navbar-nav">
+        <li class="nav-item dropdown megamenu">
+            <a class="nav-link" href="#">
+                Overview
+            </a>
+        </li>
+        <li class="nav-item dropdown megamenu">
+            <a class="nav-link" href="#">
+                Overview
+            </a>
+        </li>
         <% if user_signed_in? %>
             <li>        
             <%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => "nav-link" %>
