--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -170,7 +170,13 @@
         <div class="card-footer">
                             <%= link_to "Edit" ,edit_item_path(item) , class: "btn btn-default" %>
                             <%= link_to "Delete" ,item , :confirm => "Are you sure?" , :method => :delete , class: "btn btn-danger"%>
+
+                            <% if user_signed_in? %>
+
                              <%= button_to "Ajouter au panier" ,line_items_path(item_id: item), class: "btn btn-primary" %>
+
+                            <% end %>
+
         </div>
    
 
