--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New Order</h1>
+<body class="background_color">
+    <div class="item-show-container">
+		<h1>New Order</h1>
 
-<%= render 'form', order: @order %>
+		<%= render 'form', order: @order %>
 
-<%= link_to 'Back', orders_path %>
+		<%= link_to 'Back', orders_path %>
+	</div>
+</body>
