--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,6 +24,24 @@
 	margin: 10% 10% 5% 10%;
 }
 
+.item-show-container {
+	margin: 15% 10% 15% 10%;
+}
+
+.item-img {
+	width: 350px;
+	height: 350px;
+	box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.2);
+}
+
 .background_color {
 	background-color: #bdbdbd;
+}
+
+.card {
+	box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.2);
+}
+
+.card:hover {
+	box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.2);
 }
