--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -144,41 +144,28 @@
 
 
     <section class="slice sct-color-1">
-                        
 
-<% @items.each do |item| %>
-  <div class="row mb-4">
-    <div class="card w-100 bg-light">
-      <div class="card-body">
-        <h2 class="card-title"><%= link_to item.title,item,class:"btn btn-primary btn-block" %></h2>
-        <div class="row">
-          <div class="col-6">
-            <%= image_tag(item.item_image, width: "200") %>
-          </div>
-          <div class="col-6">
-            <div class="card-text"><%= sanitize(item.description) %></div>
-          </div>
-        </div>
-      </div>
+<div class="container">                    
+    <div class="row">
+        <% @items.each do |item| %>
+            <div class="col-lg-3 col-md-6 col-xs-12">
+                <div class="card bg-light">
+                  <div class="card-body">
+                        <h2 class="card-title text-center"><%= link_to item.title,item %></h2>
+                        <center> <%= image_tag(item.item_image, width: "200") %> </center>
+                        <div class="card-title"><%= link_to "voir plus", item, class:"btn btn-primary btn-block" %></div>
+                  </div>
 
+                  <div class="card-footer text-center font-weight-bold">
+                    <%= number_to_currency item.price, unit: '€', separator: ',', format: '%n %u' %>
+                  </div>
 
-
-      <div class="card-footer text-center font-weight-bold">
-        <%= number_to_currency item.price, unit: '€', separator: ',', format: '%n %u' %>
-      </div>
-
-        <div class="card-footer">
-                            <%= link_to "Edit" ,edit_item_path(item) , class: "btn btn-default" %>
-                            <%= link_to "Delete" ,item , :confirm => "Are you sure?" , :method => :delete , class: "btn btn-danger"%>
-                             <%= button_to "Ajouter au panier" ,line_items_path(item_id: item), class: "btn btn-primary" %>
-        </div>
-   
-
+                </div>
+                <br><br>
+            </div>
+        <% end %>
     </div>
-  </div>
-<% end %>
-
-
+</div>
 
 
                     </section>
