--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,10 +2,7 @@
 <nav class="navbar navbar-expand-lg navbar--bold  navbar-transparent navbar-inverse bg-dark ">
     <div class="container navbar-container">
         <!-- Brand/Logo -->
-            <a class="navbar-brand" href="#">
-            <img src="../../assets/images/logo/logo-1-a.png" class="d-none d-lg-inline-block" alt="Boomerang">
-            <img src="../../assets/images/logo/logo-1-a.png" class="d-lg-none" alt="Boomerang">            
-            </a>
+            <%= link_to "🐾 Amazing cat", root_path, :class => "navbar-brand" %>
         
         <div class="d-inline-block">
             <!-- Navbar toggler  -->
@@ -31,32 +28,21 @@
 
     <!-- Navbar links -->
     <ul class="navbar-nav">
-        <li class="nav-item dropdown megamenu">
-            <a class="nav-link" href="#">
-                Overview
-            </a>
-        </li>
-        <li class="nav-item dropdown megamenu">
-            <a class="nav-link" href="#">
-                Overview
-            </a>
-        </li>
         <% if user_signed_in? %>
             <li>        
-            <%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => "nav-link" %>
+                <%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => "nav-link" %>
             </li>
             <li>        
-            <%= link_to "Edit", edit_user_registration_path, :class => "nav-link" %>
+                <%= link_to "Edit", edit_user_registration_path, :class => "nav-link" %>
+            </li>
+        <% else %>
+            <li>        
+                <%= link_to "Se connecter", new_user_session_path, :class => "nav-link" %>
             </li>
 
-        <%  else %>
-        <li>        
-        <%= link_to "Se connecter", new_user_session_path, :class => "nav-link" %>
-        </li>
-
-        <li>
-            <%= link_to "S'inscrire", new_user_registration_path, :class => "nav-link" %>
-        </li>
+            <li>
+                <%= link_to "S'inscrire", new_user_registration_path, :class => "nav-link" %>
+            </li>
         <% end %>
     </ul>
 </nav>
