change activestorage display show

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -25,7 +25,7 @@
         </div>
 
 
-          <% if item.item_image.attached? %>
+          <% if @item.item_image.attached? %>
              <div class="col-lg-6">
           <%= image_tag @item.item_image, :class => "item-img" %>
         </div>
