bouton panier + rename nom bouton commande

--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -17,7 +17,7 @@
         </div>
 
         <div class="col-lg-6">
-            <%= button_to "Acheter", new_order_path, method: :get, class: "btn btn-primary" %><br><br>
+            <%= button_to "Confirmer commande", new_order_path, method: :get, class: "btn btn-primary" %><br><br>
             <%= button_to "Vider le panier", @cart, method: :delete, data: {
               confirm: "Êtes-vous sûr ?" }, class: "btn btn-danger" %>
         </div>
