--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -19,13 +19,26 @@
             <%= @item.price %> €
           </p>
 
+
+          <div class="col-lg-6">
+        <% if @item.item_image.attached? %>
+          <%= image_tag(@item.item_image, :class => "item-img" ) %> </
+        <% end %>
+        </div>
+
+
           <br><br>
 
-          <%= button_to "Ajouter au panier", line_items_path(item_id: @item), class: "btn btn-primary" %>
-        </div>
-        <div class="col-lg-6">
-          <%= image_tag @item.item_image, :class => "item-img" %>
-        </div>
+
+
+          <% if user_signed_in? %>
+                              <center><%= button_to "Ajouter au panier", line_items_path(item_id: @item), class: "btn btn-primary" %></center>
+                             <% end %>
+
+             <br><br>
+
+
+
     </div>
   </div>
 </body>
