--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -12,8 +12,7 @@
 
   <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
           data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
-          data-description="Paiement"
+          data-description="Payer votre panier"
           data-amount="500"
-          data-currency="eur"
           data-locale="auto"></script>
 <% end %>
